<resources>
    <string name="app_name">New Vision</string>
    <string name="MainPage">Home</string>
    <string name="SettingsPage">Settings</string>
    <string name="UserEye">Volunteer</string>
    <string name="UserBlind">Blind user</string>
    <string name="UsersEye">Volunteers</string>
    <string name="UsersBlind">Blind users</string>
    <string name="UnknownNumber" translatable="false">0</string>
    <string name="UnknownString" translatable="false">. . .</string>
    <string name="ProfileSettings">Profile settings</string>
    <string name="PersonalData">Personal data</string>
    <string name="PasswordSetting">Change password</string>
    <string name="LanguageSetting">My languages</string>
    <string name="OtherSettings">Other settings</string>
    <string name="SmartphoneNotifications">Smartphone notifications</string>
    <string name="EmailNotifications">Email notifications</string>
    <string name="HelpInformation">Help information</string>
    <string name="FAQ">FAQ</string>
    <string name="TermsAndPrivacyPolicy">Terms and Privacy Policy</string>
    <string name="PlanetEarth">Planet Earth</string>
    <string name="ParticipantSince">Participant since </string>
    <string name="Tutorial">Tutorial: \"How to use?\"</string>
    <string name="CallToUserEye">Call volunteer</string>
    <string name="SpecialHelp">Special help</string>
    <string name="ChangeStatus">Change status</string>
    <string name="FirstName">First name</string>
    <string name="LastName">Last name</string>
    <string name="MyName">My name</string>
    <string name="ApplySettings">Apply settings</string>
    <string name="CurrentPassword">Current password</string>
    <string name="NewPassword">New password</string>
    <string name="NewPasswordRepeat">Repeat new password</string>
    <string name="LogInToYourAccount">Log in to your account</string>
    <string name="Email" translatable="false">Email</string>
    <string name="Password">Password</string>
    <string name="LogIn">Log in</string>
    <string name="FirstTime">First time?</string>
    <string name="CreateNewAccount">Create new account</string>
    <string name="LogOut">Log out</string>
    <string name="GoogleLogIn">Log In with Google</string>
    <string name="Welcome">Welcome!</string>
    <string name="LogInText">You need to log in with Google account to use this app</string>
    <string name="IsBlind">I am a blind person</string>
    <string name="Online">Online</string>
    <string name="DontDisturb">Don\'t disturb</string>
    <string name="StatusChanged">Status changed</string>
    <string name="WaitingVolunteer">Waiting for volunteers…</string>
    <string name="ConnectedTo">"You are connected to "</string>
    <string name="Connecting">"Connecting…"</string>
    <string name="AcceptCall">Accept call</string>
    <string name="CallAcceptNotify">Blind needs help</string>
</resources>