<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="?attr/colorSecondary">

    <LinearLayout
        style="@style/baseLayout"
        android:id="@+id/base_layout"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/groupLabelStyle"
                    android:text="@string/ProfileSettings" />

                <Button
                    android:id="@+id/PersonalDataSettings"
                    style="@style/groupButtonStyle"
                    android:text="@string/PersonalData" />

                <!--Button
                    android:id="@+id/PasswordSettings"
                    style="@style/groupButtonStyle"
                    android:text="@string/PasswordSetting" /-->

                <Button
                    style="@style/groupButtonStyle"
                    android:text="@string/LanguageSetting" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/groupLabelStyle"
                    android:text="@string/OtherSettings" />

                <Button
                    android:id="@+id/NotificationSettings"
                    style="@style/groupButtonStyle"
                    android:text="@string/SmartphoneNotifications" />

                <!--Button
                    style="@style/groupButtonStyle"
                    android:text="@string/EmailNotifications" /-->

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/groupLabelStyle"
                    android:text="@string/HelpInformation" />

                <Button
                    style="@style/groupButtonStyle"
                    android:text="@string/FAQ" />

                <Button
                    style="@style/groupButtonStyle"
                    android:text="@string/TermsAndPrivacyPolicy" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/LogOutButton"
                    style="@style/groupSingleButtonStyle"
                    android:text="@string/LogOut" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>