<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="?attr/colorSecondary">

    <LinearLayout
        style="@style/baseLayout"
        android:id="@+id/base_layout"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/groupLabelStyle"
                    android:text="@string/PasswordSetting" />

                <EditText
                    android:id="@+id/OldPassword"
                    style="@style/groupEditTextStyle"
                    android:hint="@string/CurrentPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:layout_marginBottom="4dp" />

                <EditText
                    android:id="@+id/NewPassword1"
                    style="@style/groupEditTextStyle"
                    android:hint="@string/NewPassword"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

                <EditText
                    android:id="@+id/NewPassword2"
                    style="@style/groupEditTextStyle"
                    android:hint="@string/NewPasswordRepeat"
                    android:importantForAutofill="no"
                    android:inputType="textPassword" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ApplySettings"
                    style="@style/groupSingleButtonStyle"
                    android:text="@string/ApplySettings" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>