<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    android:background="?attr/colorSecondary">

    <LinearLayout
        style="@style/baseLayout"
        android:id="@+id/base_layout"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    style="@style/groupLabelStyle"
                    android:text="@string/MyName" />

                <EditText
                    android:id="@+id/FirstName"
                    style="@style/groupEditTextStyle"
                    android:hint="@string/FirstName"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/LastName"
                    style="@style/groupEditTextStyle"
                    android:hint="@string/LastName"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/IsBlindCheckbox"
                    style="@style/groupCheckboxStyle"
                    android:text="@string/IsBlind" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ApplySettings"
                    style="@style/groupSingleButtonStyle"
                    android:text="@string/ApplySettings" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>