<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragmentV"
    android:background="?attr/colorSecondary">

    <LinearLayout
        style="@style/baseLayout"
        android:id="@+id/base_layout"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/UserFullname"
                    style="@style/groupLabelStyle"
                    android:text="@string/UnknownString"
                    tools:ignore="VisualLintLocaleText" />

                <TextView
                    android:id="@+id/UserRegDate"
                    style="@style/groupTextStyle"
                    android:text="@string/ParticipantSince" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Status"
                    style="@style/groupLabelStyle"
                    android:text="@string/Online" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/groupLayout">

                <ImageView
                    android:id="@+id/img"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/PlanetEarth"
                    android:src="@drawable/earth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img">

                    <TextView
                        style="@style/groupTextStyle"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:text="@string/UsersEye" />

                    <TextView
                        style="@style/groupTextStyle"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:text="@string/UsersBlind" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <TextView
                        style="@style/groupTextStyle"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:text="@string/UnknownNumber" />

                    <TextView
                        style="@style/groupTextStyle"
                        android:layout_weight="1"
                        android:layout_margin="0dp"
                        android:text="@string/UnknownNumber" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/ChangeStatusButton"
                    style="@style/groupSingleButtonStyle"
                    android:text="@string/ChangeStatus" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/groupCardViewStyle">

            <LinearLayout
                style="@style/groupLayout"
                android:orientation="vertical">

                <Button
                    android:id="@+id/TutorialButton"
                    style="@style/groupSingleButtonStyle"
                    android:text="@string/Tutorial" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>